add more error checking, make type more specific in autogenerated files, gen project xml file
