# openapi.json
@@ -911,9 +911,7 @@
             "example": "fasta"
           },
           "organism": {
-            "allOf": [{
-              "$ref": "#/components/schemas/Organism"
-            }]
+            "$ref": "#/components/schemas/Organism"
           }
         },
         "xml": {
@@ -1059,9 +1057,7 @@
         ],
         "properties": {
           "dataFile": {
-            "allOf": [{
-              "$ref": "#/components/schemas/DataFile"
-            }]
+            "$ref": "#/components/schemas/DataFile"
           },
           "answers": {
             "type": "array",
