# src/main/java/io/swagger/api/FileApiController.java
@@ -3,7 +3,6 @@ package io.swagger.api;
 import io.swagger.model.DataFile;
 import io.swagger.model.DataFileProperties;
 import io.swagger.model.DataFilePropertiesResponse;
-
 import java.util.UUID;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.annotations.*;
@@ -11,21 +10,25 @@ import io.swagger.model.DataFilePropertiesResponseAnswers;
 import org.intermine.configurator.DataFileManager;
 import org.intermine.configurator.MineConfigManager;
 import org.intermine.configurator.ValidationResponse;
-import org.intermine.configurator.source.project.AbstractSource;
-import org.intermine.configurator.source.project.SourceFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
 import javax.validation.constraints.*;
 import javax.validation.Valid;
 import javax.servlet.http.HttpServletRequest;
+import java.io.IOException;
 import java.util.List;
-
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2019-06-25T11:51:24.013Z[GMT]")
+import java.util.Map;
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2019-06-27T09:01:47.965Z[GMT]")
 @Controller
 public class FileApiController implements FileApi {
 
@@ -50,11 +53,12 @@ public class FileApiController implements FileApi {
         DataFile dataFile = (DataFile) body;
         UUID fileId = dataFile.getFileId();
 
-        if (System.getenv("IM_DATA_DIR") == null) {
+        if (System.getProperty("IM_DATA_DIR") == null) {
             throw new IllegalArgumentException("Please set ENV VAR '$IM_DATA_DIR'");
         }
 
-        String fileLocation = getFilePath(mineId.toString(), userId.toString(), fileId.toString(), System.getenv("IM_DATA_DIR"));
+        String fileLocation = DataFileManager.getFilePath(mineId.toString(), userId.toString(), fileId.toString(),
+                System.getProperty("IM_DATA_DIR"), dataFile.getName());
 
         ValidationResponse validationResponse = DataFileManager.processDataFile(dataFile, fileLocation);
         if (validationResponse.isValid) {
@@ -71,7 +75,7 @@ public class FileApiController implements FileApi {
             throw new IllegalArgumentException("User or mine ID not found");
         }
 
-        if (System.getenv("IM_DATA_DIR") == null) {
+        if (System.getProperty("IM_DATA_DIR") == null) {
             throw new IllegalArgumentException("Please set ENV VAR '$IM_DATA_DIR'");
         }
 
@@ -79,7 +83,8 @@ public class FileApiController implements FileApi {
         DataFile.FileFormatEnum fileFormatEnum = dataFile.getFileFormat();
         UUID fileId = dataFile.getFileId();
 
-        String fileLocation = getFilePath(mineId.toString(), userId.toString(), fileId.toString(), System.getenv("IM_DATA_DIR"));
+        String fileLocation = DataFileManager.getFilePath(mineId.toString(), userId.toString(), fileId.toString(),
+                System.getProperty("IM_DATA_DIR"), dataFile.getName());
 
         // set the user config
         ValidationResponse validationResponse = DataFileManager.processDataFile(dataFile, fileLocation);
@@ -97,7 +102,5 @@ public class FileApiController implements FileApi {
         throw new IllegalArgumentException(validationResponse.errorMessage);
     }
 
-    private static String getFilePath(String userId, String mineId, String fileId, String baseDir) {
-        return baseDir + "/" + userId + "/" + mineId + "/" + fileId + "/";
-    }
+
 }
